test/scc/pp/errors/021.a
021.t:2:1: error: macro 'A' passed 5 arguments, but takes just 4